<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/geofence_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lbl_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_details"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/lbl_header"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginTop="25dp"
        android:layout_below="@+id/lbl_details"
        android:layout_toEndOf="@+id/button_alert"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/text_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@+id/text_lng"
        android:layout_alignStart="@+id/text_lng" />

    <Button
        android:id="@+id/button_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_alert"
        android:layout_below="@+id/text_lat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:onClick="geofence"/>

    <TextView
        android:id="@+id/txt_info_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_alert"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/button_alert"
        android:text="Current set location"/>

    <TextView
        android:id="@+id/lbl_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Only shown when we are close"
        android:layout_below="@+id/button_alert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/lbl_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_lat"
        android:layout_marginBottom="12dp"
        android:layout_toStartOf="@+id/txt_info_current_location"
        android:text="Longitude" />

    <TextView
        android:id="@+id/lbl_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lbl_lng"
        android:layout_alignTop="@+id/text_lat"
        android:layout_marginTop="10dp"
        android:text="Latitude" />

    <Button
        android:id="@+id/button_get_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getCurrentLocation"
        android:text="Now"
        android:layout_above="@+id/button_clear_current_location"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Will show current location"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/button_get_current_location"
        android:layout_alignStart="@+id/txt_info_current_location" />

    <Button
        android:id="@+id/button_clear_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearCurrentLocation"
        android:text="Clear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_debug_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Only for debugging purposes"
        android:background="@drawable/bubble_orange"
        android:layout_above="@+id/button_get_current_location"
        android:layout_alignParentStart="true" />

</RelativeLayout>